--- a/Home.ini
+++ b/Home.ini
@@ -1,29 +1,6 @@
 ;f域名组。。.。
-;ruleset=aycd,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/aycd.list
-;ruleset=StockX&Goat,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/StokcX-Alias.list
-;ruleset=AdsPower,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/ISPs.list
-;ruleset=Footsites,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/Footsites.list
-;ruleset=FinishLine,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/FNL.list
-;ruleset=Dicks,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/Dicks.list
-;ruleset=Arcteryx&Hibbett,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/hibbett.list
-;ruleset=Nike,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/nike.list
-;ruleset=👽 AI,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/AI.list
-;ruleset=TikTok,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/TikTok.list
-;ruleset=📘 GitHub,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/GitHub/GitHub.list
-;ruleset=🙋 Telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
-;ruleset=📀 流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
-;ruleset=📀 流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/HBO/HBO.list
-;ruleset=📀 流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Disney/Disney.list
-;ruleset=📀 流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
-;ruleset=📀 流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.list
-;ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
-;ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
-;ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
-;ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Epic.list
-;ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Origin.list
-;ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Sony.list
-;ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
-;ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Nintendo.list
+
+ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Nintendo.list
 ruleset=🌍 国外,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
 ruleset=🌍 国外,[]DOMAIN-SUFFIX,services.googleapis.cn
 ruleset=🌍 国外,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
@@ -45,16 +22,19 @@ ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ruleset=🐟 漏网之鱼,[]FINAL
 ;ruleset=➡️ 国内,[]FINAL
 
-custom_proxy_group=IP--🚀 节点选择`select`25TB-US|搬瓦工`[]IP--📡 ISP-1️⃣`[]IP--📡 ISP-2️⃣`[]DIRECT
-;custom_proxy_group=IP--🚀 节点选择`select`25TB-US|搬瓦工`[]DIRECT`[]IP--📡 ISP-1️⃣`[]IP--📡 ISP-2️⃣`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
-;custom_proxy_group=IP--🚀 节点选择`select`[]IP--✈️ 自建节点- Group 1️⃣`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
+custom_proxy_group=IP--🚀 节点选择`select`25TB-US|搬瓦工`[]IP--📡 ISP-1️⃣`[]IP--📡 ISP-2️⃣``[]DIRECT
+;custom_proxy_group=IP--🚀 节点选择`select`25TB-US|搬瓦工`[]DIRECT`[]IP--📡 ISP-1️⃣`[]IP--📡 ISP-2️⃣`
+;custom_proxy_group=IP--🚀 节点选择`select`[]IP--✈️ 自建节点- Group 1️⃣`
 
 ;2、策略组（域名组-节点组）
 
-custom_proxy_group=🌍 国外`select`[]IP--🚀 节点选择`[]DIRECT`[]IP--✈️ 自建节点- Group 1️⃣`[]IP--📡 ISP-1️⃣`[]IP--📡 ISP-2️⃣`[]DIRECT
-;custom_proxy_group=➡️ 国内`select`[]DIRECT`[]IP--🚀 节点选择`[]IP--✈️ 自建节点- Group 1️⃣`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
-custom_proxy_group=🎯 全球直连`select`[]IP--🚀 节点选择`[]DIRECT`[]IP--✈️ 自建节点- Group 1️⃣`[]IP--📡 ISP-1️⃣`[]IP--📡 ISP-2️⃣`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]IP--🚀 节点选择`[]DIRECT`[]IP--✈️ 自建节点- Group 1️⃣`[]IP--📡 ISP-1️⃣`[]IP--📡 ISP-2️⃣`[]DIRECT
+;custom_proxy_group=📘 GitHub`select`[]IP--🚀 节点选择`[]DIRECT`[]IP--✈️ 自建节点- Group 1️⃣`
+;custom_proxy_group=🙋 Telegram`select`[]IP--🚀 节点选择`[]DIRECT`[]IP--✈️ 自建节点- Group 1️⃣`
+
+custom_proxy_group=🌍 国外`select`[]IP--🚀 节点选择`[]DIRECT`[]IP--✈️ 自建节点- Group 1️⃣`[]IP--📡 ISP-1️⃣`[]IP--📡 ISP-2️⃣
+;custom_proxy_group=➡️ 国内`select`[]DIRECT`[]IP--🚀 节点选择`[]IP--✈️ 自建节点- Group 1️⃣`
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]IP--🚀 节点选择`[]IP--✈️ 自建节点- Group 1️⃣
+custom_proxy_group=🐟 漏网之鱼`select`[]IP--🚀 节点选择`[]DIRECT`[]IP--✈️ 自建节点- Group 1️⃣
 
 ;3、节点组
 custom_proxy_group=IP--✈️ 自建节点- Group 1️⃣`select`(25TB-US|搬瓦工)
