--- a/Home.ini
+++ b/Home.ini
@@ -33,7 +33,7 @@ custom_proxy_group=IP--🚀 节点选择`select`25TB-US|搬瓦工`[]IP--📡 ISP
 
 custom_proxy_group=🌍 国外`select`[]IP--🚀 节点选择`[]DIRECT`[]IP--✈️ 自建节点- Group 1️⃣`[]IP--📡 ISP-1️⃣`[]IP--📡 ISP-2️⃣
 ;custom_proxy_group=➡️ 国内`select`[]DIRECT`[]IP--🚀 节点选择`[]IP--✈️ 自建节点- Group 1️⃣`
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]IP--🚀 节点选择`[]IP--✈️ 自建节点- Group 1️⃣
+custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]IP--🚀 节点选择`[]DIRECT`[]IP--✈️ 自建节点- Group 1️⃣
 
 ;3、节点组
