--- a/Home.ini
+++ b/Home.ini
@@ -1,4 +1,4 @@
-;f域名组。。.。
+;f4355域名组。。.。
 
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Nintendo.list
 ruleset=🌍 国外,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
