--- a/Home.ini
+++ b/Home.ini
@@ -1,4 +1,4 @@
-
+;custom_proxy_group=IP--🚀 节点选择`select`25TB-US|搬瓦工`[]DIRECT`[]IP--📡 ISP-1️⃣`[]IP--📡 ISP-2️⃣`
 
 ruleset=🌍 国外,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
 ruleset=🌍 国外,[]DOMAIN-SUFFIX,services.googleapis.cn
