--- a/Clash.ini
+++ b/Clash.ini
@@ -1,4 +1,4 @@
-;/1111111域名组。。。。。。。。。
+;域名组
 ;ruleset=aycd,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/aycd.list
 ruleset=StockX&Goat,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/StokcX-Alias.list
 ruleset=AdsPower,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/ISPs.list
@@ -51,7 +51,6 @@ custom_proxy_group=IP--🚀 节点选择`select`25TB-US|搬瓦工`[]IP--📡 ISP
 
 ;2、策略组（域名组-节点组）
 custom_proxy_group=AdsPower`select`[]IP--🚀 节点选择`[]DIRECT`25TB-US|搬瓦工`[]IP--📡 ISP-1️⃣`[]IP--📡 ISP-2️⃣`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
-;custom_proxy_group=aycd`select`[]IP--🚀 节点选择`[]DIRECT`[]IP--📡 ISP-1️⃣`[]IP--📡 ISP-2️⃣`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
 custom_proxy_group=StockX&Goat`select`[]IP--🚀 节点选择`[]DIRECT`25TB-US|搬瓦工`[]IP--📡 ISP-1️⃣`[]IP--📡 ISP-2️⃣`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
 custom_proxy_group=Footsites`select`[]IP--🚀 节点选择`[]DIRECT`25TB-US|搬瓦工`[]IP--📡 ISP-1️⃣`[]IP--📡 ISP-2️⃣`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
 custom_proxy_group=FinishLine`select`[]IP--🚀 节点选择`[]DIRECT`25TB-US|搬瓦工`[]IP--📡 ISP-1️⃣`[]IP--📡 ISP-2️⃣`[]IP--🇭🇰 香港节点`[]IP--🇯🇵 日本节点`[]IP--🇺🇲 美国节点`[]IP--🏠 家宽`[]IP--其他
